--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,43 @@
 body {
     padding: 0;
     overflow: hidden;
-    font-family: colfax, helvetica, arial, sans-serif;
 }
 
+h1 {
+  font-family: 'Pathway Gothic One', sans-serif;
+  font-size: 42px;
+}
+
+h2 {
+  font-family: 'Pathway Gothic One', sans-serif;
+  font-size: 32px;
+}
+
+
 p.main {
-  font-size: 24px;
+  font-family: 'garamond';
+  font-size: 20px;
 }
 
 .map {
     position: absolute;
     right: 0px;
-    left: 400px;
+    left: 30%;
     height: 100%;
     top: 0;
 }
 
 .sidebar {
     position: absolute;
-    left: 0px;
-    width: 400px;
+    left: 0;
+    right: 70%;
     top: 0;
     bottom: 0;
     overflow-y: auto;
     padding: 20px;
     font-size: 16px;
+    background-color: #081419;
+    color: #d1d6d8;
 }
 
 .legend {
@@ -38,35 +51,57 @@ p.main {
   top: 1%;
 }
 
+.button-previous {
+    position: absolute;
+    left: 2%;
+    top: 60%;
+    background-color: #27586b;
+    border: none;
+    color: #d1d6d8;
+    width: 120px;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 26px;
+    font-family: 'Pathway Gothic One', sans-serif;
+    border-radius: 3px;
+}
+
+
+.button-next-1 {
+    position: absolute;
+    left: 2%;
+    top: 60%;
+    width:120px;
+    background-color: #27586b;
+    border: none;
+    color: #d1d6d8;
+    width: 120px;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 26px;
+    font-family: 'Pathway Gothic One', sans-serif;
+    border-radius: 3px;
+}
+
+.button-next-rest {
+    position: absolute;
+    left: 15%;
+    top: 60%;
+    width: 120px;
+    padding: 10px;
+    background-color: #27586b;
+    border: none;
+    color: #d1d6d8;
+    text-align: center;
+    text-decoration: none;
+    font-size: 26px;
+    font-family: 'Pathway Gothic One', sans-serif;
+    border-radius: 3px;
+}
+
 td {
   min-width: 50px;
   padding: 5px;
-}
-
-.mon-color {
-  background-color: #B5121E
-}
-
-.tue-color {
-  background-color: #4DB93C
-}
-
-.wed-color {
-  background-color: #E08248
-}
-
-.thu-color {
-  background-color: #0C7860
-}
-
-.fri-color {
-  background-color: #DA4651
-}
-
-.sat-color {
-  background-color: #A3DF9A
-}
-
-.sun-color {
-  background-color: #BA5212
 }
