--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,16 @@ h1 {
 
 h2 {
   font-family: 'Pathway Gothic One', sans-serif;
-  font-size: 32px;
+  font-size: 26px;
 }
 
-h3 {
+h4 {
   font-family: 'Pathway Gothic One', sans-serif;
-  font-size: 24px;
+  font-weight: lighter;
+  font-size: 28px;
   color: #d1d6d8;
-  padding-left: 10px;
+  padding-left: 0px;
+  padding-top: 0px;
 }
 
 p.main {
@@ -25,9 +27,12 @@ p.main {
   font-size: 20px;
 }
 
+
+
+
 .legend-elements {
   font-family: 'garamond';
-  font-size: 20px;
+  font-size: 16px;
   color: #d1d6d8;
   text-indent: 55px;
 }
@@ -39,7 +44,7 @@ p.main {
 .map {
     position: absolute;
     right: 0px;
-    left: 30%;
+    left: 400px;
     height: 100%;
     top: 0;
 }
@@ -47,72 +52,235 @@ p.main {
 .sidebar {
     position: absolute;
     left: 0;
-    right: 70%;
+    width: 400px;
     top: 0;
     bottom: 0;
     overflow-y: auto;
     padding: 20px;
     font-size: 16px;
     min-height: 130px;
-    background-color: #081419;
+    background-color: #0d1c1c;
+    color: #d1d6d8;
+}
+
+.info-bar-style {
+    position: absolute;
+    left: 400px;
+    right:0;
+    top: 700px;
+    bottom: 0;
+    overflow-y: auto;
+    padding: 20px;
+    font-size: 16px;
+    min-height: 130px;
+    background-color: #6ba3a3;
     color: #d1d6d8;
 }
 
 
 
-.circle-icon-equestrian {
+.circle-icon-F {
   position:absolute;
   left: 8%;
-  top: 26%;
-  background: #a75700;
-  width: 25px;
-  height: 25px;
+  top: 21.5%;
+  background: #ffcb63;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
 }
 
-.circle-icon-sightseeing {
+.circle-icon-M {
   position:absolute;
   left: 8%;
-  top: 39.5%;
-  background: #d97100;
-  width: 25px;
-  height: 25px;
+  top: 60%;
+  background: #39538d;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
 }
 
 
-.circle-icon-water {
+.circle-icon-mon {
   position:absolute;
   left: 8%;
-  top: 54.5%;
-  background: #ff8500;
-  width: 25px;
-  height: 25px;
+  top: 8%;
+  background: #ff7400;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
 }
 
-.circle-icon-hiking {
+.circle-icon-tue {
   position:absolute;
   left: 8%;
-  top: 69.5%;
-  background: #ffba70;
-  width: 25px;
-  height: 25px;
+  top: 21%;
+  background: #1240ab;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
 }
 
-.circle-icon-camping {
+.circle-icon-wed {
   position:absolute;
   left: 8%;
-  top: 84.5%;
-  background: #ffd3a4;
-  width: 25px;
-  height: 25px;
+  top: 34%;
+  background: #46b2b2;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
 }
+
+
+.circle-icon-thu {
+  position:absolute;
+  left: 8%;
+  top: 47%;
+  background: #ffae6b;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.circle-icon-fri {
+  position:absolute;
+  left: 8%;
+  top: 60%;
+  background: #5f7ec6;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.circle-icon-sat {
+  position:absolute;
+  left: 8%;
+  top: 73%;
+  background: #ffce6b;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+
+.circle-icon-sun {
+  position:absolute;
+  left: 8%;
+  top:87%;
+  background: #4ebaba;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.circle-icon-Auto-Ped {
+  position:absolute;
+  left: 8%;
+  top: 5%;
+  background: #46b2b2;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.circle-icon-Auto-Bike {
+  position:absolute;
+  left: 8%;
+  top: 15%;
+  background: #1240ab;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.circle-icon-Auto-Auto {
+  position:absolute;
+  left: 8%;
+  top: 24%;
+  background: #ff7400;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.circle-icon-Auto-Fixed {
+  position:absolute;
+  left: 8%;
+  top: 33.5%;
+  background: #ffae6b;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+
+.circle-icon-Bus-Ped {
+  position:absolute;
+  left: 8%;
+  top: 43%;
+  background: #5f7ec6;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.circle-icon-Bus-Bike {
+  position:absolute;
+  left: 8%;
+  top: 52.5%;
+  background: #ffce6b;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.circle-icon-Bus-Auto {
+  position:absolute;
+  left: 8%;
+  top: 62%;
+  background: #4ebaba;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.circle-icon-Truck-Ped {
+  position:absolute;
+  left: 8%;
+  top: 72%;
+  background: #ffaa00;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.circle-icon-Truck-Bike {
+  position:absolute;
+  left: 8%;
+  top: 81%;
+  background: #afa093;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.circle-icon-ATV {
+  position:absolute;
+  left: 8%;
+  top: 91%;
+  background: #777f7f;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+
+
+
+
+
 
 .leaflet-popup-content-wrapper {
-  background: #081419;
+  background: #151818;
   font-size: 20px;
   font-family: 'Pathway Gothic One', sans-serif;
   border-radius: 3px;
@@ -122,72 +290,170 @@ p.main {
 .leaflet-popup-tip {
   width:10px;
   height:15px;
-  background: #081419;
+  background: #151818;
 }
 
-.button-section {
+.button-original {
+    position: fixed;
+    bottom: 50px;
+    left: 18px;
+    background-color: #93c0c0;
+    border: none;
+    color: #151818;
+    width: 100px;
+    padding: 10px 10px;
+    text-align: center;
+    font-size: 18px;
+    font-family: 'Pathway Gothic One', sans-serif;
+    border-radius: 3px;
+}
+
+.button-reset {
+    position: fixed;
+    bottom: 50px;
+    left: 288px;
+    background-color: #93c0c0;
+    border: none;
+    color: #151818;
+    width: 100px;
+    padding: 10px 10px;
+    text-align: center;
+    font-size: 18px;
+    font-family: 'Pathway Gothic One', sans-serif;
+    border-radius: 3px;
+}
+
+.button-filter {
+    position: fixed;
+    bottom: 160px;
+    left: 288px;
+    background-color: #93c0c0;
+    border: none;
+    color: #151818;
+    width: 100px;
+    padding: 10px 15px;
+    text-align: center;
+    font-size: 26px;
+    font-family: 'Pathway Gothic One', sans-serif;
+    border-radius: 3px;
+}
+
+
+.button-filter-gender {
+    position: fixed;
+    bottom: 650px;
+    left: 25px;
+    background-color: #93c0c0;
+    border: none;
+    color: #151818;
+    width: 110px;
+    padding: 10px 15px;
+    text-align: center;
+    font-size: 18px;
+    font-family: 'Pathway Gothic One', sans-serif;
+    border-radius: 3px;
+}
+
+.button-filter-day {
+    position: fixed;
+    bottom: 650px;
+    left: 143px;
+    background-color: #93c0c0;
+    border: none;
+    color: #151818;
+    width: 110px;
+    padding: 10px 15px;
+    text-align: center;
+    font-size: 18px;
+    font-family: 'Pathway Gothic One', sans-serif;
+    border-radius: 3px;
+}
+
+
+.button-filter-type {
+    position: fixed;
+    bottom: 650px;
+    left: 260px;
+    background-color: #93c0c0;
+    border: none;
+    color: #151818;
+    width: 110px;
+    padding: 10px 15px;
+    text-align: center;
+    font-size: 18px;
+    font-family: 'Pathway Gothic One', sans-serif;
+    border-radius: 3px;
+}
+
+
+.gender-radial {
     position: absolute;
-    left: 0;
-    right: 70%;
-    height: 600px;
+    left: 16px;
+    right: 260px;
+    top: 40%;
     bottom: 0;
     overflow-y: auto;
-    padding: 20px;
+    padding: 10px;
+    font-family: 'garamond';
     font-size: 16px;
     min-height: 130px;
-    background-color: #081419;
+    background-color: #0d1c1c;
     color: #d1d6d8;
 }
 
 
-.button-previous {
-    position: fixed;
-    bottom: 540px;
-    left: 25px;
-    background-color: #006388;
-    border: none;
-    color: #d1d6d8;
-    width: 120px;
-    padding: 10px 20px;
-    text-align: center;
-    font-size: 26px;
-    font-family: 'Pathway Gothic One', sans-serif;
-    border-radius: 3px;
-}
-
-
-
-.button-next {
-    position: fixed;
-    bottom: 540px;
-    left: 160px;
-    width: 120px;
+.day-radial {
+    position: absolute;
+    left: 132px;
+    right: 127px;
+    top: 40%;
+    bottom: 0;
+    overflow-y: auto;
     padding: 10px;
-    background-color: #006388;
-    border: none;
+    font-family: 'garamond';
+    font-size: 16px;
+    min-height: 130px;
+    background-color: #0d1c1c;
     color: #d1d6d8;
-    text-align: center;
-    font-size: 26px;
-    font-family: 'Pathway Gothic One', sans-serif;
-    border-radius: 3px;
 }
 
+
+.type-radial {
+    position: absolute;
+    left: 250px;
+    right: 0;
+    top: 40%;
+    bottom: 0;
+    overflow-y: auto;
+    padding: 10px;
+    font-family: 'garamond';
+    font-size: 16px;
+    min-height: 130px;
+    background-color: #0d1c1c;
+    color: #d1d6d8;
+}
 
 td {
   min-width: 50px;
   padding: 5px;
 }
 
-
+.legend-elements {
+  font-family: 'garamond';
+  font-size: 14px;
+  color: #d1d6d8;
+  text-indent: 35px;
+  padding: 0px 0px;
+}
 
 .legend-style {
   position:absolute;
-  left: 37%;
+  left: 45%;
   top: 1%;
-  min-width: 240px;
-  min-height: 200px;
-  background-color: #161819;
+  min-width: 100px;
+  min-height: 50px;
+  background-color: #0d1c1c;
   border:1px solid #000;
-  padding: 0px 7px;
+  padding: 0px 10px;
   border-radius: 10px;
 }
